# Rubble

./: .gitignore  FUTURE_IDEAS.md  IMPLEMENTATION_PLAN.md  INSTALL.md  README.md  ROADMAP.md  STATUS.md  install.ps1  pyproject.toml
compiler/: __init__.py  __main__.py  ast_nodes.py  codegen.py  fmt.py  lexer.py  parser.py  repl.py  rubblec.py  type_checker.py
examples/: advanced_features.rbl  browser_demo.rbl  cabinet_file_io.rbl  canvas_demo.rbl  canvas_input.rbl  canvas_shapes.rbl  hello_world.rbl  new_features.rbl  panel_input.rbl  recipes_and_blueprints.rbl  recipes_blueprints.rbl  test_flow.rbl  test_smelt.rbl  test_wire.rbl  variables_and_types.rbl  wire_and_unwrap.rbl
runtime/: rubble_canvas.c  rubble_db.c  rubble_http.c  rubble_json.c  rubble_math.c  rubble_rand.c  rubble_sound.c  rubble_stdlib.c  rubble_thread.c  rubble_time.c
src/: __init__.py  __main__.py  ast_nodes.py  interpreter.py  lexer.py  parser.py  rubble.py
tests/: final_test.rbl  test_all.rbl  test_array_types.rbl  test_block_scoping.rbl  test_comprehensive.rbl  test_const.rbl  test_crate.rbl  test_ctfe.rbl  test_db.rbl  test_decorators.rbl  test_default_params.rbl  test_enums.rbl  test_error_recovery.rbl  test_heap.rbl  test_http.rbl  test_integer_types.rbl  test_interp.rbl  test_intersection_types.rbl  test_label.rbl  test_lambdas.rbl  test_macros.rbl  test_map_types.rbl  test_math.rbl  test_methods.rbl  test_modules.rbl  test_multi_return.rbl  test_named_args.rbl  test_null_coalesce.rbl  test_nullable_types.rbl  test_optional_chaining.rbl  test_pattern_matching.rbl  test_range_loops.rbl  (+12 more)
(+11 files in other folders)
