[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "rubble"
version = "0.2.0"
description = "Rubble programming language compiler — targets LLVM IR and native binaries"
requires-python = ">=3.8"

[project.scripts]
rubble = "compiler.rubblec:main"

[tool.setuptools.packages.find]
include = ["compiler*"]
